infrastructure/devops-ci-cd/networking/ingress/route53-aztech-msdp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: route53-aztech-msdp-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.dev.aztech-msdp.com
        - dev.aztech-msdp.com
      secretName: route53-aztech-msdp-tls
  rules:
    - host: argocd.dev.aztech-msdp.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
    - host: dev.aztech-msdp.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
